
noinst_PROGRAMS = ifo_dump play_title title_info

ifo_dump_SOURCES = ifo_dump.c
ifo_dump_LDADD = $(top_builddir)/dvdread/libdvdread.la @DL_LIBS@

play_title_SOURCES = play_title.c
play_title_LDADD = $(top_builddir)/dvdread/libdvdread.la @DL_LIBS@

title_info_SOURCES = title_info.c
title_info_LDADD = $(top_builddir)/dvdread/libdvdread.la @DL_LIBS@

